# sensor_simulation

./: CMakeLists.txt
include/: Sensor.hpp
src/: main.cpp
tests/: test_dummy.cpp
